updated supported countries list

--- a/modules/specialized-guides/pages/payg/payg-overview.adoc
+++ b/modules/specialized-guides/pages/payg/payg-overview.adoc
@@ -6,11 +6,13 @@
 == Introduction to {payg}
 {productname} {payg} or {payglongform} is a flexible and cost-effective solution that allows users to manage and monitor their systems. Unlike traditional subscription models, {payg} does not require a long-term subscription. Users can leverage images of {productname} on a {payglongform} basis, paying only for the time of use, and the number of managed and monitored systems. {payg} with {productname} is an optimal solution for those seeking control, convenience, and cost savings when managing and monitoring their infrastructure on AWS, Azure, and GCP.
 
+
+
+== FAQ {productname} on the AWS Marketplace
+
 To cater to customers who favor a cloud-centric billing approach, SUSE has recently added the **{productname} Server Family** listing to the AWS Marketplace.
 
 This document introduces the advantages of running {productname}, complemented by the convenience of a new monthly pricing model available through the AWS Marketplace.
-
-== FAQ
 
 === The listing
 
@@ -69,8 +71,10 @@ When purchasing {productname} via the AWS Marketplace, the billing is as follows
 **Is there a way to try {productname} before purchasing?**::
 If using the {productname} {payg} listing in the AWS Marketplace, billing will commence from the time of deployment / applicable clients are on-boarded to {productname}.
 +
+
 There is a Bring-Your-Own-Subscription (BYOS) listing for {productname} in the AWS Marketplace which can be used, a trial subscription key can be otained via the SUSE website. This deployment cannot be directly converted to allow billing via the AWS Marketplace.
 +
+
 To benefit from monthly billing via the AWS Marketplace, the BYOS {productname} deployment will need to be migrated to a {productname} deployed via the AWS Marketplace.
 
 **How does SUSE calculate the ‘number of managed instances’ to bill for?**:: 
@@ -150,9 +154,105 @@ The AWS Marketplace listing for {productname} is tied to a specific version of {
 **No**. There is no choice over the {productname} version when deploying using the AWS Marketplace listing.  If a prior version of {productname} is required, this will need to be installed manually using the standard documentation. 
 
 **How often is the listing updated (including the version of {productname} etc.)?**:: 
-The Marketplace listing is tied to a specific version of {productname}, usually the latest version available at the time of the listing.  
+The Marketplace listing is tied to a specific version of {productname}, usually the latest version available at the time of the listing.
 +
+
 Typically, the listing in AWS Marketplace is updated quarterly, or more frequently if there are security issues.  
++
+
+It is worth noting that the image update process may not be fully aligned to the {productname} product maintenance releases (every 6-8 weeks), so {productname} instances should be patched after deployment.  
+
+**I have multiple independent SUSE Manager deployments, each running a separate install of the AWS Marketplace listing for SUSE Manager, how is this billed?**:: 
+As the SUSE Manager deployments are independent, each is billed separately from the next. 
+
+**I have purchased multiple SUSE products from the AWS Marketplace (i.e. Rancher, NeuVector and SUSE Manager), does the AWS Marketplace billing method still work?**:: 
+**Yes**.  The billing mechanism for the various products is independent.  Each deployment will be billed separately via the AWS Marketplace. 
+
+**I already have an existing SUSE Manager deployment, how can I get this deployment to bill via the AWS Marketplace?**:: 
+Existing deployments cannot be directed converted or updated to provide billing via the AWS Marketplace. 
++
+
+It is easy to migrate your existing SUSE Manager deployment to a SUSE Manager instance which has been deployed from and can bill via the AWS Marketplace.
 
 
+=== Technical (Product)
+
+**Can I migrate an existing SUSE Manager instance to a PAYG version?**:: 
+**Yes**, it is possible to use a migration script to migrate the SUSE Manager database to a new PAYG instance of SUSE Manager from the AWS Marketplace.  This has the benefit of maintaining event history for managed instanced. Salt states and synchronized packages are also moved as part of this process. 
++
+
+If event history does not need to be retained as part of the move, customers can simply deploy a new SUSE Manager instance from the AWS Marketplace and re-onboard all clients. 
+
+// Add link to docs on this process
+ 
+**How do I obtain support?**:: 
+It is very simple to open a support case with SUSE for SUSE Manager.   
++
+
+Create a ‘supportconfig’ via SUSE Manager instance CLI and upload the output to the SUSE Customer Center at the following  
++
+
+link:https://scc.suse.com/cloudsupport[]
++
+
+Providing the billing is active, a support case will be opened. 
+
+**Is there any difference between the SUSE Manager product on the AWS Marketplace compared to the versions I can run in my own data center?**:: 
+The SUSE Manager product available in the AWS Marketplace is the same product, with the same functionality that you would run on-premises or with a manual installation.   
++
+
+The only exception being the ability to bill via the AWS Marketplace and connect to the SUSE Update Infrastructure for SUSE Manager product updates. 
+
+**Does the SUSE Manager instance need to run 24/7?**:: 
+To ensure continuity with support it is recommended that the SUSE Manager instance always remains active.   
+
+**How do I get fixes and updates for SUSE Manager, do I need a subscription key?**:: 
+SUSE Manager, when deployed via the AWS Marketplace listing (monthly billing) will automatically connect to the SUSE Update Infrastructure in AWS, no separate SUSE Manager Subscription Key is required.  
++
+
+Updates to the SUSE Manager instance can be applied from those channels using standard SUSE tooling (i.e. zypper). 
+
+**Is the use of SUSE Manager Hub supported with this listing?**:: 
+**Yes**.  SUSE Manager Hub is recommended for customer with more than 10,000 managed clients.
++
+
+As long as the SUSE Manager Hub instance has no connected clients, there will be no cost for the SUSE Manager software components / Hub etc. 
++
+
+Billing will occur from the downstream SUSE Managed instance, where managed clients are connected. 
+
+**Can I manage Bring Your Own Subscription (BYOS) clients in AWS with SUSE Manager PAYG?**:: 
+To manage SLES (for SAP) BYOS clients, SCC credentials with entitlement to valid SLES (for SAP) subscriptions will be required.  These credentials should be added to the SUSE Manger configuration to enable this functionality. 
+
+**I have a hybrid setup, can I manage instances / clients outside of AWS?**:: 
+**Yes**, it is possible to manage clients, in the cloud, on premises or both.  
++
+
+To enable management of SUSE client in an on-premises datacenter, SCC credentials with entitlement to valid SLES (for SAP) subscriptions will be required.   
++
+
+These credentials should be added to the SUSE Manger configuration to enable this functionality. 
+
+**Are there additional charges for using a SUSE Manager Proxy?**:: 
+With Hybrid Network egress charges may apply, so consider the use of a proxy.   
++
+
+To reduce network costs, SUSE recommend the use of the containerized proxy.   
++
+
+Please note: Whilst the SUSE Manger Proxy usage is included as part of the {payg} SUSE Manager subscription, an LCM+ subscription will be billed if the proxy is also a managed client. 
+
+**Can I have a SUSE Manager node on premises and bill via the AWS Marketplace.**:: 
+**No**. To benefit from AWS Marketplace billing, the SUSE Manager instance must reside on the AWS Cloud. Any SUSE Manager instances on premises require their own subscriptions. 
+
+=== Miscellaneous 
+
+**Where can I find out more about the AWS Marketplace listing for SUSE Manager?**::
+You can use the following resources to learn more about the SUSE Manager listing and how to deploy
+
+**Where can I find out more about SUSE Manager?**:: 
+link:https://www.suse.com/products/suse-manager/[] 
++
+
+link:https://www.suse.com/training/course/[]
 
