updated country listing

--- a/modules/specialized-guides/pages/payg/payg-overview.adoc
+++ b/modules/specialized-guides/pages/payg/payg-overview.adoc
@@ -256,3 +256,10 @@ link:https://www.suse.com/products/suse-manager/[]
 
 link:https://www.suse.com/training/course/[]
 
+**Where can I find a list of supported countries for {productname} on AWS?**::
+You can find both supported and unsupported countries at the following url:
++
+
+xref:payg-supported-country-listing.adoc[Supported Countries]
+
+
