--- a/modules/specialized-guides/pages/payg/payg-supported-country-listing.adoc
+++ b/modules/specialized-guides/pages/payg/payg-supported-country-listing.adoc
@@ -1,5 +1,7 @@
-= Appendix: Supported AWS countries 
+= Supported AWS countries 
+:toc:
 
+== Supported countries on AWS
 Countries that can transact SUSE Manager Support through the AWS Marketplace:
 
 [caption=]
@@ -103,6 +105,12 @@ United Kingdom, GB
 United States, US 
 |===
  
+
+
+== Unsupported Countries on AWS
+
+Countries that cannot transact SUSE Manager Support via the AWS Marketplace.   
+
 [caption=]
 .Unsupported Countries
 [cols 2,2,2]
