moved faq to single document

--- a/modules/specialized-guides/nav-specialized-guides-guide.adoc
+++ b/modules/specialized-guides/nav-specialized-guides-guide.adoc
@@ -10,12 +10,15 @@ endif::[]
 * xref:specialized-guides-overview.adoc[Specialized Guides]
 
 ** {payg} Guide
-*** xref:payg/payg-overview.adoc[{payglongform} or {payg} Introduction]
+*** xref:payg/payg-overview.adoc[{payglongform} or {payg} Overview]
+*** xref:payg/payg-faq.adoc[{payg} FAQ on AWS]
 *** xref:payg/payg-benefits.adoc[Benefits of {payg}]
-**** xref:payg/payg-getting-started-with-aws.adoc[Getting started with AWS]
-***** xref:payg/payg-find-the-suma-aws-image.adoc[Find the Image]
-***** xref:payg/payg-aws-requirements[SUSE Manager AWS requirements]
-***** xref:payg/payg-setup-the-image.adoc[Start the Image]
+*** xref:payg/payg-aws-requirements[SUSE Manager AWS requirements]
+*** xref:payg/payg-supported-country-listing.adoc[Supported Country List]
+*** xref:payg/payg-find-the-suma-aws-image.adoc[Find the Image]
+*** xref:payg/payg-prepare-the-image.adoc[Prepare the AMI Image]
+*** xref:payg/payg-setup-the-image.adoc[Start the Instance]
+*** xref:payg/payg-initial-setup.adoc[Intial Setup]
 
 //*** xref:payg/payg-and-azure.adoc[PAYG and Azure]
 //**** xref:payg/payg-getting-started-with-azure.adoc[Getting started with Azure]
