--- a/modules/specialized-guides/nav-specialized-guides-guide.adoc
+++ b/modules/specialized-guides/nav-specialized-guides-guide.adoc
@@ -16,9 +16,9 @@ endif::[]
 *** xref:payg/payg-aws-requirements[SUSE Manager AWS requirements]
 *** xref:payg/payg-supported-country-listing.adoc[Supported Country List]
 *** xref:payg/payg-find-the-suma-aws-image.adoc[Find the Image]
-*** xref:payg/payg-prepare-the-image.adoc[Prepare the AMI Image]
+*** xref:payg/payg-prepare-the-image.adoc[Prepare the AMI {productname} Image]
 *** xref:payg/payg-setup-the-image.adoc[Start the Instance]
-*** xref:payg/payg-initial-setup.adoc[Intial Setup]
+*** xref:payg/payg-initial-setup.adoc[Initial Setup]
 
 //*** xref:payg/payg-and-azure.adoc[PAYG and Azure]
 //**** xref:payg/payg-getting-started-with-azure.adoc[Getting started with Azure]
