fixed unterminated example block

--- a/modules/specialized-guides/pages/payg/payg-country-listing.adoc
+++ b/modules/specialized-guides/pages/payg/payg-country-listing.adoc
@@ -2,7 +2,7 @@
 :toc:
 
 == Supported countries on AWS
-Countries that can transact SUSE Manager Support through the AWS Marketplace:
+Countries that can transact with SUSE Manager Support through the AWS Marketplace:
 
 [caption=]
 .Supported Countries
