--- a/modules/specialized-guides/nav-specialized-guides-guide.adoc
+++ b/modules/specialized-guides/nav-specialized-guides-guide.adoc
@@ -8,18 +8,19 @@ endif::[]
 
 
 * xref:specialized-guides-overview.adoc[Specialized Guides]
-
 ** {payg} Guide
-*** xref:payg/payg-overview.adoc[{payglongform} or {payg} Overview]
-*** xref:payg/payg-faq.adoc[{payg} FAQ on AWS]
+*** xref:payg/payg-overview.adoc[{payglongform} Overview]
 *** xref:payg/payg-benefits.adoc[Benefits of {payg}]
-*** xref:payg/payg-aws-requirements[SUSE Manager AWS requirements]
-*** xref:payg/payg-country-listing.adoc[Supported Country List]
-*** xref:payg/payg-find-the-suma-aws-image.adoc[Find the Image]
-*** xref:payg/payg-prepare-the-image.adoc[Prepare the AMI {productname} Image]
-*** xref:payg/payg-setup-the-image.adoc[Start the Instance]
-*** xref:payg/payg-initial-setup.adoc[Initial Setup]
-
+*** {payg} on AWS
+**** xref:payg/payg-faq.adoc[{payg} FAQ on AWS]
+**** xref:payg/payg-country-listing.adoc[Supported Country List]
+**** xref:payg/payg-aws-requirements.adoc[SUSE Manager AWS requirements]
+**** xref:payg/payg-find-the-suma-aws-image.adoc[Find the Image]
+**** xref:payg/payg-prepare-the-image.adoc[Initial configuration of the AMI Image]
+**** xref:payg/payg-start-the-image.adoc[Start the Instance]
+**** xref:payg/payg-initial-setup.adoc[Initial Setup]
+**** xref:payg/payg-starting-the-server.adoc[Starting the Server]
+**** xref:payg/payg-webui-configuration-of-payg.adoc[WebUI Configuration]
 //*** xref:payg/payg-and-azure.adoc[PAYG and Azure]
 //**** xref:payg/payg-getting-started-with-azure.adoc[Getting started with Azure]
 //**** xref:payg/payg-azure-requirements[Azure requirements] 
