--- a/modules/specialized-guides/nav-specialized-guides-guide.adoc
+++ b/modules/specialized-guides/nav-specialized-guides-guide.adoc
@@ -19,8 +19,8 @@ endif::[]
 **** xref:payg/payg-prepare-the-image.adoc[Initial configuration of the AMI Image]
 **** xref:payg/payg-start-the-image.adoc[Start the Instance]
 **** xref:payg/payg-initial-setup.adoc[Initial Setup]
-**** xref:payg/payg-starting-the-server.adoc[Starting the Server]
-**** xref:payg/payg-webui-configuration-of-payg.adoc[WebUI Configuration]
+**** xref:payg/payg-start-the-server.adoc[Start the Server]
+**** xref:payg/payg-webui-configuration.adoc[WebUI Configuration]
 //*** xref:payg/payg-and-azure.adoc[PAYG and Azure]
 //**** xref:payg/payg-getting-started-with-azure.adoc[Getting started with Azure]
 //**** xref:payg/payg-azure-requirements[Azure requirements] 
