--- a/modules/specialized-guides/pages/payg/payg-faq.adoc
+++ b/modules/specialized-guides/pages/payg/payg-faq.adoc
@@ -1,4 +1,4 @@
-= FAQ {productname} on the AWS Marketplace
+= FAQ: {productname} on the AWS Marketplace
 :toc:
 
 To cater to customers who favor a cloud-centric billing approach, SUSE has added the **{productname} Server Family** listing to the AWS Marketplace.
