--- a/modules/specialized-guides/nav-specialized-guides-guide.adoc
+++ b/modules/specialized-guides/nav-specialized-guides-guide.adoc
@@ -15,8 +15,8 @@ endif::[]
 **** xref:payg/payg-faq.adoc[{payg} FAQ on AWS]
 **** xref:payg/payg-country-listing.adoc[Supported Country List]
 **** xref:payg/payg-aws-requirements.adoc[SUSE Manager AWS requirements]
-**** xref:payg/payg-find-the-suma-aws-image.adoc[Find the Image]
-**** xref:payg/payg-prepare-the-image.adoc[Initial configuration of the AMI Image]
+**** xref:payg/payg-find-the-aws-image.adoc[Find the Image]
+**** xref:payg/payg-configure-the-image.adoc[Configure the Image on EC2]
 **** xref:payg/payg-start-the-image.adoc[Start the Instance]
 **** xref:payg/payg-initial-setup.adoc[Initial Setup]
 **** xref:payg/payg-start-the-server.adoc[Start the Server]
