further 5.0 adjustments and FIXMEs added

--- a/modules/installation-and-upgrade/pages/upgrade-intro.adoc
+++ b/modules/installation-and-upgrade/pages/upgrade-intro.adoc
@@ -42,10 +42,13 @@ For example:
 * From 4.2 to 4.3.
 * From 5.0 to 5.1.
 
+If you take a closer look, you always upgrade from and to the latest patch level of the minor version.
+For example, from 4.2.12 to 4.3.8 or from 5.0.i to 5.1.j (when available).
+
 Patch Level Upgrade (Z Upgrade)::
 Upgrading within the same minor version.
-This is often referred to as a maintenance update.
-For example, upgrading from 4.1.2 to 4.1.8 or from 4.3.0 to 4.3.1.
+This is often referred to as a maintenance update or MU.
+For example, upgrading from 4.3.7 to 4.3.8 or from 5.0.0 to 5.0.1 (when available).
 
 If you are upgrading the {productname} Server, see xref:installation-and-upgrade:server-intro.adoc[].
 endif::[]
