--- a/modules/installation-and-upgrade/pages/server-y-zypper.adoc
+++ b/modules/installation-and-upgrade/pages/server-y-zypper.adoc
@@ -1,3 +1,4 @@
+// FIXME: server-migrator.sh???
 [[server-y-zypper]]
 = Server - Minor Version Upgrade with Zypper
 
@@ -6,6 +7,7 @@ To perform the upgrade with Zypper, use the Zypper migration tool.
 
 
 
+// FIXME: Adjust version numbers
 .Procedure: Upgrading with Zypper
 
 . From the command prompt, as root, ensure the spacewalk services are not running:
@@ -19,6 +21,7 @@ spacewalk-service stop
 ----
 zypper migration
 ----
++
 Zypper will show the possible migration targets with detailed summaries.
 . Select the appropriate target, and follow the prompts to complete the migration.
 . Reboot the server.
@@ -34,15 +37,10 @@ Zypper will show the possible migration targets with detailed summaries.
 ----
 spacewalk-service start
 ----
-+
-[NOTE]
-====
-[command]``spacewalk-schema-upgrade`` is not needed anymore.
-It will be run during [command]``spacewalk-service start`` automatically.
-====
+
 
 If the process fails, check these issues first:
 
 * If Zypper does not have the migration tool available, install the [package]``zypper-migration-plugin`` package.
 * If there are older updates available, Zypper will notify you and ask to install them first.
-    You must install all updates before performing the upgrade.
+  You must install all updates before performing the upgrade.
