--- a/modules/client-configuration/pages/autoinst-profiles.adoc
+++ b/modules/client-configuration/pages/autoinst-profiles.adoc
@@ -271,11 +271,11 @@ $SNIPPET('my_partition')
 If the autoinstallation file contains shell script variables like ``$(example)``, the content needs to be escaped with a backslash: ``\$(example)``.
 Escaping the ``$`` symbol prevents the templating engine from evaluating the symbol as an internal variable.
 
-// FIXME: "#raw" or "#end raw"?
-Text blocks such as code fragments or scripts can be escaped by wrapping them with the ``\#raw`` and ``\#end`` directives.
+// FIXME 2023-09-12, ke: "#raw" or "#end raw"?
+Text blocks such as code fragments or scripts can be escaped by wrapping them with the ``\#raw`` and ``\#end raw`` directives.
 For example:
 
-// FIXME: "#raw" or "#end raw"?
+// FIXME 2023-09-12, ke: "#raw" or "#end raw"?
 ----
 #raw
 #!/bin/bash
