--- a/modules/administration/pages/image-management.adoc
+++ b/modules/administration/pages/image-management.adoc
@@ -1,12 +1,11 @@
 [[image-management]]
 = Image Building and Management
 
-
-
 [[at.images.overview]]
 == Image Building Overview
 
 {productname} enables system administrators to build containers and OS Images and push the result in image stores.
+
 The workflow looks like this:
 
 . Define an image store
@@ -24,17 +23,14 @@ The image store location is unique and is not customizable.
 Images are stored in [path]``/srv/www/os-image/<organization id>``.
 
 
-
 [[at.images.docker]]
 == Container Images
 
 image::image-building.png[scaledwidth=80%]
 
 
-
 [[at.images.docker.requirements]]
 === Requirements
-
 
 The containers feature is available for {salt} clients running {sles} 12 or later.
 Before you begin, ensure your environment meets these requirements:
@@ -42,22 +38,17 @@ Before you begin, ensure your environment meets these requirements:
 * A published git repository containing a dockerfile and configuration scripts.
   The repository can be public or private, and should be hosted on GitHub, GitLab, or BitBucket.
 * A properly configured image store, such as a Docker registry.
-+
 
 For more information on Containers, see https://documentation.suse.com/container/all/html/Container-guide/.
 //https://documentation.suse.com/sles/15-SP3/html/SLES-all/book-container.html
 
 
-
 [[at.images.docker.buildhost]]
 === Create a Build Host
-
 
 To build images with {productname}, you need to create and configure a build host.
 Container build hosts are {salt} clients running {sle} 12 or later.
 This section guides you through the initial configuration for a build host.
-
-
 
 [IMPORTANT]
 ====
@@ -89,10 +80,8 @@ salt '$your_client' state.highstate
 ----
 
 
-
 [[at.images.docker.buildchannels]]
 === Create an Activation Key for Containers
-
 
 The containers built using {productname} use channels associated to the activation key as repositories when building the image.
 This section guides you through creating an ad-hoc activation key for this purpose.
@@ -110,13 +99,11 @@ image::systems_create_activation_key.png[scaledwidth=80%]
   Use the drop-down menu to select the [guimenu]``Base Channel`` to associate with this key.
 . Confirm with btn:[Create Activation Key].
 
-For more information, see <<bp.key.managment>>.
-
+For more information, see xref:client-configuration:activation-keys.adoc[].
 
 
 [[at.images.docker.imagestore]]
 === Create an Image Store
-
 
 All built images are pushed to an image store.
 This section contains information about creating an image store.
@@ -126,20 +113,17 @@ image::images_image_stores.png[scaledwidth=80%]
 . Select menu:Images[Stores].
 . Click [guimenu]``Create`` to create a new store.
 +
-
 image::images_image_stores_create.png[scaledwidth=80%]
 
 . Define a name for the image store in the [guimenu]``Label`` field.
 . Provide the path to your image registry by filling in the [guimenu]``URI`` field, as a fully qualified domain name (FQDN) for the container registry host (whether internal or external).
-
-
++
 ----
 registry.example.com
 ----
-
-
++
 The Registry URI can also be used to specify an image store on a registry that is already in use.
-
++
 ----
 registry.example.com:5000/myregistry/myproject
 ----
@@ -147,10 +131,8 @@ registry.example.com:5000/myregistry/myproject
 . Click btn:[Create] to add the new image store.
 
 
-
 [[at.images.docker.profile]]
 === Create an Image Profile
-
 
 All container images are built using an image profile, which contains the building instructions.
 This section contains information about creating an image profile with the {productname} {webui}.
@@ -160,21 +142,17 @@ image::images_image_profiles.png[scaledwidth=80%]
 .Procedure: Create an Image Profile
 . To create an image profile select menu:Images[Profiles] and click btn:[Create].
 +
-
 image::images_image_create_profile.png[scaledwidth=80%]
 
 . Provide a name for the image profile by filling in the [guimenu]``Label`` field.
 +
-
 [NOTE]
 ====
 If your container image tag is in a format such as `myproject/myimage`, make sure your image store registry URI contains the `/myproject` suffix.
 ====
 
 . Use a dockerfile as the `Image Type`.
-
 . Use the drop-down menu to select your registry from the `Target Image Store` field.
-
 . In the [guimenu]``Path`` field, type a GitHub, GitLab or BitBucket repository URL.
   The URL should be be http, https, or a token authentication URL.
   Use one of these formats:
@@ -185,20 +163,19 @@ If your container image tag is in a format such as `myproject/myimage`, make sur
 ----
 https://github.com/USER/project.git#branchname:folder
 ----
-
++
 * GitHub organization project repository
 +
 ----
 https://github.com/ORG/project.git#branchname:folder
 ----
-
++
 * GitHub token authentication
 +
 
 If your git repository is private, modify the profile's URL to include authentication.
 Use this URL format to authenticate with a GitHub token:
 +
-
 ----
 https://USER:<AUTHENTICATION_TOKEN>@github.com/USER/project.git#master:/container/
 ----
@@ -206,25 +183,19 @@ https://USER:<AUTHENTICATION_TOKEN>@github.com/USER/project.git#master:/containe
 .GitLab Path Options
 * GitLab single user project repository
 +
-
 ----
 https://gitlab.example.com/USER/project.git#master:/container/
 ----
-
 * GitLab groups project repository
 +
-
 ----
 https://gitlab.example.com/GROUP/project.git#master:/container/
 ----
-
 * GitLab token authentication
 +
-
 If your git repository is private and not publicly accessible, you need to modify the profile's git URL to include authentication.
 Use this URL format to authenticate with a GitLab token:
 +
-
 ----
 https://gitlab-ci-token:<AUTHENTICATION_TOKEN>@gitlab.example.com/USER/project.git#master:/container/
 ----
@@ -383,7 +354,7 @@ These are some known problems when working with images:
 OS Images are built by the Kiwi image system.
 The output image is customizable and can be PXE, QCOW2, LiveCD, or other types of images.
 
-For more information about the Kiwi build system, see the https://doc.opensuse.org/projects/kiwi/doc/[Kiwi documentation].
+For more information about the Kiwi build system, see the https://osinside.github.io/kiwi/[Kiwi documentation].
 
 
 
@@ -523,7 +494,8 @@ image::systems_create_activation_key.png[scaledwidth=80%]
 . Enter a [guimenu]``Description``, a [guimenu]``Key`` name, and use the drop-down box to select a [guimenu]``Base Channel`` to associate with the key.
 . Confirm with btn:[Create Activation Key].
 
-For more information, see <<bp.key.managment>>.
+//For more information, see <<bp.key.managment>>.
+For more information, see xref:client-configuration:activation-keys.adoc[].
 
 
 
@@ -539,7 +511,13 @@ By default, the image store is located at [path]``/srv/www/os-images``.
 ====
 Image stores for Kiwi build type, used to build system, virtual, and other images, are not supported yet.
 
+ifeval::[{suma-content} == true]
 Images are always stored in [path]``/srv/www/os-images/<organization id>`` and are accessible via HTTP/HTTPS [url]``https://<susemanager_host>/os-images/<organization id>``.
+endif::[]
+
+ifeval::[{uyuni-content} == true]
+Images are always stored in [path]``/srv/www/os-images/<organization id>`` and are accessible via HTTP/HTTPS [url]``https://<uyuni_host>/os-images/<organization id>``.
+endif::[]
 ====
 
 
@@ -638,7 +616,7 @@ Kiwi sources consist at least of `config.xml`.
 Usually, `config.sh` and `images.sh` are present as well.
 Sources can also contain files to be installed in the final image under the `root` subdirectory.
 
-For information about the Kiwi build system, see the https://doc.opensuse.org/projects/kiwi/doc/[Kiwi documentation].
+For information about the Kiwi build system, see the https://osinside.github.io/kiwi/[Kiwi documentation].
 
 {suse} provides examples of fully functional image sources at the https://github.com/SUSE/manager-build-profiles[SUSE/manager-build-profiles] public GitHub repository.
 
