--- a/modules/administration/pages/image-management.adoc
+++ b/modules/administration/pages/image-management.adoc
@@ -32,24 +32,21 @@ image::image-building.png[scaledwidth=80%]
 [[at.images.docker.requirements]]
 === Requirements
 
-The containers feature is available for Salt clients running {sles} 12 or later.
+The containers feature is available for {salt} clients running {sles} 12 or later.
 Before you begin, ensure your environment meets these requirements:
 
 * A published git repository containing a dockerfile and configuration scripts.
   The repository can be public or private, and should be hosted on GitHub, GitLab, or BitBucket.
 * A properly configured image store, such as a Docker registry.
 +
-For more information on Containers, see:
-+
-
-* https://documentation.suse.com/sles/15-SP3/html/SLES-all/book-container.html
+For more information on Containers, see https://documentation.suse.com/container/all/html/Container-guide/.
 
 
 [[at.images.docker.buildhost]]
 === Create a Build Host
 
 To build images with {productname}, you need to create and configure a build host.
-Container build hosts are Salt clients running {sle} 12 or later.
+Container build hosts are {salt} clients running {sle} 12 or later.
 This section guides you through the initial configuration for a build host.
 
 [IMPORTANT]
@@ -68,7 +65,7 @@ For example, you must build Raspberry Pi {sles}{nbsp}15 SP3 images on a Raspber
 
 From the {productname} {webui}, perform these steps to configure a build host:
 
-. Select a Salt client to be designated as a build host from the menu:Systems[Overview] page.
+. Select a {salt} client to be designated as a build host from the menu:Systems[Overview] page.
 . From the [guimenu]``System Details`` page of the selected client assign the containers modules.
   Go to menu:Software[Software Channels] and enable the containers module (for example, [guimenu]``SLE-Module-Containers15-Pool`` and [guimenu]``SLE-Module-Containers15-Updates``).
   Confirm by clicking btn:[Change Subscriptions].
@@ -101,7 +98,7 @@ image::systems_create_activation_key.png[scaledwidth=80%]
   Use the drop-down menu to select the [guimenu]``Base Channel`` to associate with this key.
 . Confirm with btn:[Create Activation Key].
 
-For more information, see <<bp.key.managment>>.
+For more information, see xref:client-configuration:activation-keys.adoc[].
 
 
 [[at.images.docker.imagestore]]
@@ -121,11 +118,9 @@ image::images_image_stores_create.png[scaledwidth=80%]
 . Define a name for the image store in the [guimenu]``Label`` field.
 . Provide the path to your image registry by filling in the [guimenu]``URI`` field, as a fully qualified domain name (FQDN) for the container registry host (whether internal or external).
 
-
 ----
 registry.example.com
 ----
-
 
 The Registry URI can also be used to specify an image store on a registry that is already in use.
 
@@ -139,7 +134,6 @@ registry.example.com:5000/myregistry/myproject
 
 [[at.images.docker.profile]]
 === Create an Image Profile
-
 
 All container images are built using an image profile, which contains the building instructions.
 This section contains information about creating an image profile with the {productname} {webui}.
@@ -380,7 +374,7 @@ For more information about the Kiwi build system, see the https://doc.opensuse.o
 [[at.images.kiwi.requirements]]
 === Requirements
 
-The Kiwi image building feature is available for Salt clients running {sles}{nbsp}12 and {sles}{nbsp}11.
+The Kiwi image building feature is available for {salt} clients running {sles}{nbsp}12 and {sles}{nbsp}11.
 //SLE15 images support is not yet released for SUMA4, but is part of SUMA4.0.4 as tech preview
 //From {sles}{nbsp}15, ``kiwi-ng`` is used instead of the legacy Kiwi.
 
@@ -401,7 +395,7 @@ For more information, see the documentation of the underlying system.
 
 [WARNING]
 ====
-The build host must be a Salt client.
+The build host must be a {salt} client.
 Do not install the build host as a traditional client.
 ====
 
@@ -411,7 +405,7 @@ Do not install the build host as a traditional client.
 === Create a Build Host
 
 To build all kinds of images with {productname}, create and configure a build host.
-OS Image build hosts are Salt clients running on {sles}{nbsp}15 (SP2 or later), {sles}{nbsp}12 (SP3 or later) or {sles}{nbsp}11 SP4.
+OS Image build hosts are {salt} clients running on {sles}{nbsp}15 (SP2 or later), {sles}{nbsp}12 (SP3 or later) or {sles}{nbsp}11 SP4.
 
 This procedure guides you through the initial configuration for a build host.
 
@@ -493,7 +487,6 @@ Specify the RPM package with the {productname} SSL certificate in the build sour
 ====
 
 
-
 [[at.images.kiwi.buildchannels]]
 === Create an Activation Key for OS Images
 
@@ -513,13 +506,11 @@ image::systems_create_activation_key.png[scaledwidth=80%]
 . Enter a [guimenu]``Description``, a [guimenu]``Key`` name, and use the drop-down box to select a [guimenu]``Base Channel`` to associate with the key.
 . Confirm with btn:[Create Activation Key].
 
-For more information, see <<bp.key.managment>>.
-
+For more information, see xref:client-configuration:activation-keys.adoc[].
 
 
 [[at.images.kiwi.imagestore]]
 === Create an Image Store
-
 
 OS Images can require a significant amount of storage space.
 Therefore, we recommended that the OS Image store is located on a partition of its own or on a Btrfs subvolume, separate from the root partition.
@@ -529,14 +520,18 @@ By default, the image store is located at [path]``/srv/www/os-images``.
 ====
 Image stores for Kiwi build type, used to build system, virtual, and other images, are not supported yet.
 
-Images are always stored in [path]``/srv/www/os-images/<organization id>`` and are accessible via HTTP/HTTPS [url]``https://<susemanager_host>/os-images/<organization id>``.
-====
+ifeval::[{suma-content} == true]
+Images are always stored in [path]``/srv/www/os-images/<organization id>`` and are accessible via HTTP/HTTPS [url]``https://<susemanager_host>/os-images/<organization id>``.	Images are always stored in [path]``/srv/www/os-images/<organization id>`` and are accessible via HTTP/HTTPS [url]``https://<susemanager_host>/os-images/<organization id>``.
+endif::[]
 
+ifeval::[{uyuni-content} == true]
+Images are always stored in [path]``/srv/www/os-images/<organization id>`` and are accessible via HTTP/HTTPS [url]``https://<uyuni_host>/os-images/<organization id>``.
+endif::[]
+====
 
 
 [[at.images.kiwi.profile]]
 === Create an Image Profile
-
 
 Manage image profiles using the {webui}.
 
@@ -619,16 +614,14 @@ This directory must be present on the selected build host.
 ----
 
 
-
 [[at.images.kiwi.sourceexample]]
 ==== Example of Kiwi Sources
-
 
 Kiwi sources consist at least of `config.xml`.
 Usually, `config.sh` and `images.sh` are present as well.
 Sources can also contain files to be installed in the final image under the `root` subdirectory.
 
-For information about the Kiwi build system, see the https://doc.opensuse.org/projects/kiwi/doc/[Kiwi documentation].
+For information about the Kiwi build system, see the https://osinside.github.io/kiwi/[Kiwi documentation].
 
 {suse} provides examples of fully functional image sources at the https://github.com/SUSE/manager-build-profiles[SUSE/manager-build-profiles] public GitHub repository.
 
@@ -733,8 +726,8 @@ During the inspection phase {susemgr} collects information about the image:
 
 [NOTE]
 ====
-If the built image type is `PXE`, a Salt pillar is also generated.
-Image pillars are stored in the database and the Salt subsystem can access details about the generated image.
+If the built image type is `PXE`, a {salt} pillar is also generated.
+Image pillars are stored in the database and the {salt} subsystem can access details about the generated image.
 Details include where the image files are located and provided, image checksums, information needed for network boot, and more.
 
 The generated pillar is available to all connected clients.
@@ -747,7 +740,7 @@ The generated pillar is available to all connected clients.
 
 
 Building an image requires several dependent steps.
-When the build fails, investigating Salt states results and build log can help identify the source of the failure.
+When the build fails, investigating {salt} states results and build log can help identify the source of the failure.
 You can carry out these checks when the build fails:
 
 * The build host can access the build sources
