--- a/modules/administration/pages/image-management.adoc
+++ b/modules/administration/pages/image-management.adoc
@@ -153,7 +153,7 @@ If your container image tag is in a format such as `myproject/myimage`, make sur
 . Use a dockerfile as the `Image Type`.
 . Use the drop-down menu to select your registry from the `Target Image Store` field.
 . In the [guimenu]``Path`` field, type a GitHub, GitLab or BitBucket repository URL.
-  The URL should be be http, https, or a token authentication URL.
+  The URL should be [literal]``http``, [literal]``https``, or a token authentication URL.
   Use one of these formats:
 
 .GitHub Path Options
