remove comments from lists that esp. confuse localization
https://github.com/SUSE/spacewalk/issues/22457
https://github.com/uyuni-project/uyuni-docs/issues/2308

--- a/modules/client-configuration/pages/delete-clients.adoc
+++ b/modules/client-configuration/pages/delete-clients.adoc
@@ -105,14 +105,6 @@ Instead of [command]``zypper`` use equivalent packager commands such as [command
 ----
 systemctl stop salt-minion
 ----
-+
-////
-SLES 11:
-+
-----
-rcsalt stop
-----
-////
 
 . Remove the repositories and configuration files:
 +
@@ -160,9 +152,6 @@ Instead of [command]``zypper`` use equivalent packager commands such as [command
 systemctl stop osad
 ----
 
-// SLES 11:
-//    rcosad stop
-
 . On a SLES 12 client remove the following  packages if installed.
 This should be tried first (in case the [package]``osad`` package is not installed, do not list it on the command line):
 +
@@ -202,7 +191,7 @@ If this fails, they should be manually removed.
 The [command]``rpm -e`` command should not be used unless the [command]``zypper rm`` command above failed.
 
 . After this is complete, the /etc/sysconfig/rhn/systemid file should be removed.
-  This file only exists on a client machine and is used to register itself with SUSE Manager:
+  This file only exists on a client machine and is used to register itself with {productname}:
 +
 ----
 rm /etc/sysconfig/rhn/systemid
