--- a/modules/client-configuration/pages/configuration-management.adoc
+++ b/modules/client-configuration/pages/configuration-management.adoc
@@ -5,7 +5,7 @@ You can use configuration files and channels to manage configuration for your cl
 
 [NOTE]
 ====
-Some of the following features are available only for traditional clients.
+Some of the following features are available for traditional clients only.
 For features supported on {salt} clients, see the table below.
 ====
 
