--- a/modules/client-configuration/pages/configuration-management.adoc
+++ b/modules/client-configuration/pages/configuration-management.adoc
@@ -192,7 +192,7 @@ You can also use the system set manager (SSM) to compare the configuration file 
 
 == Jinja templating on {salt} Clients
 
-Jinja templating is possible on {salt} Clients.
+Jinja templating is possible on {salt} clients.
 Jinja provides variables from pillars or grains.
 They can be used in configuration files or {salt} states.
 
