--- a/modules/client-configuration/pages/configuration-management.adoc
+++ b/modules/client-configuration/pages/configuration-management.adoc
@@ -190,7 +190,7 @@ You can also use the system set manager (SSM) to compare the configuration file 
 
 
 
-== Jinja templating on {salt} Clients
+== Jinja templating on {salt} clients
 
 Jinja templating is possible on {salt} clients.
 Jinja provides variables from pillars or grains.
