--- a/modules/client-configuration/pages/configuration-management.adoc
+++ b/modules/client-configuration/pages/configuration-management.adoc
@@ -214,7 +214,7 @@ dns_conf:
 
 
 
-== Configuration File Macros on Traditional Clients
+== Configuration file macros on traditional clients
 
 Being able to store one file and share identical configurations is useful, but in some cases you might need many variations of the same configuration file, or configuration files that differ only in system-specific details, such as host name and MAC address.
 In this case, you can use macros or variables within the configuration files.
