Backport 4.3: CCG salt jinja templating #16905 keichwa (#2420) (#2430)
* CCG salt jinja templating #16905 keichwa (#2420)
* Jinja templating on Salt Clients
https://github.com/SUSE/spacewalk/issues/16905
* Update modules/client-configuration/pages/configuration-management.adoc
Co-authored-by: Ornela Marić <omaric@suse.com>

--- a/modules/client-configuration/pages/configuration-management.adoc
+++ b/modules/client-configuration/pages/configuration-management.adoc
@@ -5,7 +5,7 @@ You can use configuration files and channels to manage configuration for your cl
 
 [NOTE]
 ====
-Some of the following features are available only for traditional clients.
+Some of the following features are available for traditional clients only.
 For features supported on {salt} clients, see the table below.
 ====
 
@@ -190,9 +190,9 @@ You can also use the system set manager (SSM) to compare the configuration file 
 
 
 
-== Jinja templating on {salt} Clients
+== Jinja templating on {salt} clients
 
-Jinja templating is possible on {salt} Clients.
+Jinja templating is possible on {salt} clients.
 Jinja provides variables from pillars or grains.
 They can be used in configuration files or {salt} states.
 
@@ -214,7 +214,7 @@ dns_conf:
 
 
 
-== Configuration File Macros on Traditional Clients
+== Configuration file macros on traditional clients
 
 Being able to store one file and share identical configurations is useful, but in some cases you might need many variations of the same configuration file, or configuration files that differ only in system-specific details, such as host name and MAC address.
 In this case, you can use macros or variables within the configuration files.
